@@ -857,6 +857,7 @@
 /memcheck/tests/bug340392
 /memcheck/tests/bug464969_d_demangle
 /memcheck/tests/bug472219
+/memcheck/tests/bug401284
 /memcheck/tests/calloc-overflow
 /memcheck/tests/cdebug_zlib
 /memcheck/tests/cdebug_zlib_gnu
