@@ -1,0 +1,3 @@
+prog: bug401284
+args: hello
+vgopts: -q
